# AllegroUtils

./: CMakeLists.txt  README  README.md  main.c
Classes/: gameObject.c  gameObject.h
Classes/gameObjects/: collider_gameobject.h  image_gameobject.c  image_gameobject.h
GameObjects/: gameObject.c  gameObject.h
GameObjects/TypeOfObjects/: collider_gameobject.c  text_area_gameobject.c  text_area_gameobject.h
Painter/: painter.c  painter.h
Utils/: 2dlogics.c  2dlogics.h
tools/: colliderCreator.py
